--- a/src/main/resources/com/example/currencyconverter/converter-view.fxml
+++ b/src/main/resources/com/example/currencyconverter/converter-view.fxml
@@ -1,16 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.currencyconverter.HelloController">
+<VBox alignment="CENTER" prefHeight="236.0" prefWidth="744.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.currencyconverter.ConverterController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+   <children>
+      <GridPane alignment="CENTER" hgap="4.0" prefHeight="104.0" prefWidth="622.0" vgap="4.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <TextField fx:id="textInput" GridPane.rowIndex="1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <ComboBox fx:id="convertfrom" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label prefHeight="18.0" prefWidth="146.0" text="Label" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Label text="Input">
+               <font>
+                  <Font name="Century Schoolbook Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label text="Convert From" GridPane.columnIndex="1">
+               <font>
+                  <Font name="Century Schoolbook Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label text="Output" GridPane.columnIndex="3">
+               <font>
+                  <Font name="Century Schoolbook Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER_RIGHT" text="Convert To" GridPane.columnIndex="2">
+               <font>
+                  <Font name="Century Schoolbook Italic" size="24.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="convertto" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
+   </children>
 </VBox>
